// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider should render Slider with correct DOM structure 1`] = `
<div
  class="rc-slider"
>
  <div
    class="rc-slider-rail"
  />
  <div
    class="rc-slider-track"
    style="left:0%;width:0%"
  />
  <div
    class="rc-slider-step"
  />
  <div
    aria-disabled="false"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    class="rc-slider-handle"
    role="slider"
    style="left:0%"
    tabindex="0"
  />
  <div
    class="rc-slider-mark"
  />
</div>
`;

exports[`Slider should render Slider without handle if value is null 1`] = `
<div
  class="rc-slider"
>
  <div
    class="rc-slider-rail"
  />
  <div
    class="rc-slider-track"
    style="left:0%;width:0%"
  />
  <div
    class="rc-slider-step"
  />
  <div
    class="rc-slider-mark"
  />
</div>
`;
